<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_box="all">

        <Button
            android:id="@+id/conversion_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/basic_button_height"
            android:layout_marginVertical="@dimen/linear_layout_vertical_margin"
            android:background="@drawable/round_button"
            android:hint="@string/conversion_type_button_hint"
            android:onClick="changeConversionType"
            android:text="@string/conversion_type_button_text_default"
            android:textAlignment="center"
            android:textColor="@color/basic_button_fg"
            android:textFontWeight="700"
            android:textSize="@dimen/basic_button_text_size" />

        <EditText
            android:id="@+id/convert_from_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/linear_layout_vertical_margin"
            android:hint="@string/convert_from_input_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingVertical="@dimen/basic_input_padding_vertical"
            android:text="@string/convert_from_input_text_default"
            android:textAlignment="textEnd"
            android:textColor="@color/basic_button_fg"
            android:textSize="@dimen/basic_input_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/linear_layout_vertical_margin">

            <Button
                android:id="@+id/convert_from_unit"
                android:layout_width="40dp"
                android:layout_height="@dimen/basic_button_height"
                android:layout_alignParentStart="true"
                android:layout_marginHorizontal="@dimen/linear_layout_horizontal_margin"
                android:background="@drawable/round_button"
                android:hint="@string/convert_from_button_hint"
                android:onClick="changeFromUnit"
                android:text="@string/convert_from_button_text_default"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/basic_button_fg"
                android:textFontWeight="700"
                android:textSize="@dimen/basic_button_text_size" />

            <Button
                android:id="@+id/unit_swap"
                android:layout_width="30dp"
                android:layout_height="@dimen/basic_button_height"
                android:layout_centerInParent="true"
                android:background="@drawable/round_button"
                android:hint="@string/swap_units_button_hint"
                android:text="@string/swap_units_button_text"
                android:onClick="swapUnits"
                android:textColor="@color/basic_button_fg"
                android:textFontWeight="700"
                android:textSize="@dimen/basic_button_text_size" />

            <Button
                android:id="@+id/convert_to_unit"
                android:layout_width="40dp"
                android:layout_height="@dimen/basic_button_height"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/linear_layout_horizontal_margin"
                android:background="@drawable/round_button"
                android:hint="@string/convert_to_button_hint"
                android:onClick="changeToUnit"
                android:text="@string/convert_to_button_text_default"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/basic_button_fg"
                android:textFontWeight="700"
                android:textSize="@dimen/basic_button_text_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/convert_to_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/linear_layout_vertical_margin"
            android:hint="@string/convert_from_input_hint"
            android:importantForAutofill="no"
            android:paddingHorizontal="4dp"
            android:paddingVertical="@dimen/basic_input_padding_vertical"
            android:text="@string/convert_from_input_text_default"
            android:textAlignment="textEnd"
            android:textColor="@color/basic_button_fg"
            android:textSize="@dimen/basic_input_text_size" />
    </LinearLayout>
</android.support.wearable.view.BoxInsetLayout>
